group 'top.pengcheng789.java'
version '1.0.1'

apply plugin: 'java'
apply plugin: 'maven-publish'

sourceCompatibility = 9.0
targetCompatibility = 9.0

repositories {
    mavenCentral()
}

dependencies {
    compile 'org.slf4j:slf4j-log4j12:1.8.0-beta0'
    compile 'org.apache.commons:commons-lang3:3.7'
    compile 'org.apache.commons:commons-collections4:4.1'
    compile 'commons-codec:commons-codec:1.11'
    compile 'javax.servlet:javax.servlet-api:4.0.0'
    compile 'org.thymeleaf:thymeleaf:3.0.9.RELEASE'
    compile 'com.fasterxml.jackson.core:jackson-databind:2.9.3'

    testCompile group: 'junit', name: 'junit', version: '4.12'
}

/**
 * Publishing to Maven Local.
 */
publishing {
    publications {
        mavenCustom(MavenPublication) {
            groupId 'top.pengcheng789.java'
            artifactId 'boring-framework'
            version "$version"

            from components.java
        }
    }
}
